fix bottom not visible

--- a/swipegallery/index.css
+++ b/swipegallery/index.css
@@ -63,13 +63,13 @@
 }
 
 /* fakecss:D:/2023/swipegallery/src/swipegallery.esbuild-svelte-fake-css */
-.swipe-holder.svelte-lvbaqb {
+.swipe-holder.svelte-lgmlo6 {
   height: 100vh;
   width: auto;
 }
-img.svelte-lvbaqb {
+img.svelte-lgmlo6 {
   width: auto;
-  height: 100vh;
+  height: 93vh;
 }
 
 /* fakecss:D:/2023/swipegallery/src/app.esbuild-svelte-fake-css */
